tests/functional/lang/parse-fail/unexpected-uri.err.exp
error: syntax error, unexpected URI
       at «stdin»:1:11:
            1| { inherit http://x; }
             |           ^
            2|
